recursion.logo.sierpinski.Sierpinski.scala.error
Erreur de compilation :
Sierpinski:13: error: not found: value levels
    sierpinski(levels-1,length/2)
               ^